--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,10 @@
 		<link rel="stylesheet" href="css/spritzy.css"/>
 	</head>
 	<body>
+	<div class="reader">
+
+	</div>
+
 	<script data-main="js/main" src="/bower_components/requirejs/require.js"></script>
 	</body>
 </html>
