fixed weird chars and numbers

--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="css/spritzy.css"/>
 	</head>
 	<body>
+	<div data-spritzy="true">1922. The Japanese-American scholar and translator Kenneth Yasuda published The Japanese Haiku: Its Essential Nature, History, and Possibilities in English, with Selected Examples in 1957. The book includes both translations from Japanese and original poems of his own in English, which had previously appeared in his book titled A Pepper-Pod: Classic Japanese Poems together with Original Haiku. In these books Yasuda presented a critical theory about haiku, to which he added comments on haiku poetry by early 20th-century poets and critics. His translations apply a 5–7–5 syllable count in English, with the first and third lines end-rhymed. Yasuda considered that haiku translated into English should utilize all of the poetic resources of the language. Yasuda's theory also includes the concept of a "haiku moment" based in personal experience, and provides the motive for writing a haiku. His notion of the haiku moment has resonated with haiku writers in North America, even though the notion is not widely promoted in Japanese haiku.
+	</div>
 	<div class="reader">
 
 	</div>
