--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,6 @@
 
 	</div>
 
-	<script data-main="js/main" src="../bower_components/requirejs/require.js"></script>
+	<script data-main="js/demo" src="../bower_components/requirejs/require.js"></script>
 	</body>
 </html>
